--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>一致団結ポスティングマップ</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
   <style>
     html, body { height: 100%; margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: sans-serif; margin: 0; padding: 0; height: 100dvh; min-height: 100dvh; background: #fff; display: flex; flex-direction: column; }
     h1 { background-color: #e4007f; color: white; padding: 12px 10px 10px 10px; margin: 0; font-size: 1.3em; letter-spacing: 0.05em; position: relative; }
-
     #form {
       padding: 10px; background-color: #f9f9f9; border-bottom: 1px solid #ccc;
       display: flex; gap: 1rem; align-items: flex-end; font-size: 0.95em;
@@ -36,7 +35,6 @@
       box-sizing: border-box;
     }
     #name { width: 170px; min-width: 120px; max-width: 220px; box-sizing: border-box; }
-
     .custom-help-container {
       position: absolute;
       right: 14px;
@@ -50,8 +48,10 @@
       height: 40px;
       margin: 0;
     }
-    #form {
-      position: relative;
+    #form { position: relative; }
+    #map {
+      flex: 1 1 auto; min-height: 350px; width: 100vw; height: 70vh; max-height: 100dvh; z-index: 1;
+      display: block;
     }
     @media (max-width: 900px) {
       #form label { min-width: 100px; max-width: 170px; }
@@ -78,19 +78,14 @@
         font-size: 16px !important;
         width: 156px; min-width: 117px; max-width: 221px;
       }
-      .custom-help-container {
-        right: 6px;
-      }
+      .custom-help-container { right: 6px; }
     }
     @media (max-width: 400px) {
       #form label { min-width: 70px; max-width: 110px; }
       #form input[type="date"] { width: 105px; min-width: 80px; max-width: 143px; }
       #form input[type="text"], #name { width: 91px; min-width: 78px; max-width: 143px; }
-      .custom-help-container {
-        right: 2px;
-      }
+      .custom-help-container { right: 2px; }
     }
-
     .custom-help-btn {
       width: 32px; height: 32px; border-radius: 50%; background: #fff; color: #e4007f; border: 2px solid #e4007f;
       font-size: 22px; font-weight: bold; text-align: center; line-height: 28px; box-shadow: 0 2px 6px rgba(60,64,67,0.12);
@@ -101,7 +96,6 @@
     .custom-help-balloon { position: absolute; top: 38px; right: 0; width: 270px; max-width: 70vw; background: #fff; color: #333; font-size: 1em; border: 1.5px solid #e4007f; border-radius: 7px; box-shadow: 0 2px 12px rgba(0,0,0,0.16); padding: 15px 14px 15px 18px; z-index: 1004; pointer-events: auto; word-break: break-word; line-height: 1.7; display: none; }
     .custom-help-balloon:before { content: ""; position: absolute; top: -13px; right: 20px; border: 7px solid transparent; border-bottom: 10px solid #e4007f; }
     .custom-help-balloon:after { content: ""; position: absolute; top: -11px; right: 22px; border: 6px solid transparent; border-bottom: 10px solid #fff; }
-
     .leaflet-popup-close-button { display: none !important; }
     .leaflet-draw-toolbar .leaflet-draw-remove {
       width: 30px; height: 30px; margin: 7px 0 0 0; background: #fff;
@@ -119,11 +113,7 @@
       background: #e4007f;
       border-color: #e4007f;
     }
-    /* Clear All/全削除/クリアボタンを表示したままにする（JSで動作上書き） */
-    #map {
-      flex: 1 1 auto; min-height: 350px; width: 100vw; height: 70vh; max-height: 100dvh; z-index: 1;
-      display: block;
-    }
+    /* 編集モード時のドット（ハンドル）を小さく */
     .leaflet-editing-icon, .leaflet-touch-icon,
     .leaflet-edit-resize, .leaflet-edit-move {
       width: 4px !important;
@@ -132,6 +122,7 @@
       margin-top: -2px !important;
       border-width: 2px !important;
     }
+    /* 削除モード時は編集用ドットを完全非表示 */
     .leaflet-edit-remove-active .leaflet-editing-icon,
     .leaflet-edit-remove-active .leaflet-touch-icon,
     .leaflet-edit-remove-active .leaflet-edit-resize,
@@ -142,9 +133,7 @@
   </style>
 </head>
 <body>
-  <h1>
-    一致団結ポスティングマップ
-  </h1>
+  <h1>一致団結ポスティングマップ</h1>
   <div id="form">
     <label for="date">実施日（必須）
       <input type="date" id="date" required />
@@ -182,6 +171,7 @@
 
     let map;
     let drawnItems;
+
     function initMap() {
       map = L.map('map', { tap: false }).setView([35.6996, 139.7652], 13);
       window.map = map;
@@ -220,17 +210,7 @@
 
       // 削除ボタンカスタマイズ＋Clear Allの動作上書き
       function customizeRemoveBtn() {
-        const toolbar = document.querySelector('.leaflet-draw-toolbar-top');
-        if (toolbar) {
-          let removeBtn = toolbar.querySelector('.leaflet-draw-edit-remove');
-          if (removeBtn) {
-            removeBtn.classList.add('leaflet-draw-remove');
-            removeBtn.innerHTML = `
-            <svg viewBox="0 0 24 24"><path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z" fill="#d32f2f"/></svg>
-            `;
-          }
-        }
-        // Clear All/全削除ボタンの動作上書き
+        // Clear All等のボタンを検出
         document.querySelectorAll('.leaflet-draw-actions li.leaflet-draw-action').forEach(li => {
           const t = li.getAttribute('title') || '';
           if (t.includes('Clear') || t.includes('全削除') || t.includes('クリア')) {
@@ -238,14 +218,13 @@
               e.preventDefault();
               e.stopPropagation();
               alert('この機能は使えません');
-              // 再描画（消えた図形を復活）
               loadAllPolygons();
               return false;
-            });
+            }, true);
           }
         });
 
-        // 削除モード時は編集用ドットを非表示
+        // 削除モード時は編集用ドットを完全非表示
         const mapContainer = document.getElementById('map');
         if (mapContainer) {
           mapContainer.classList.add('leaflet-edit-remove-active');
@@ -287,23 +266,13 @@
 
       function startEditMode(layer) {
         if (map._editingPolygon) return;
-        // 編集前にfeatureをdeepコピー
-        const originalGeoJSON = layer.feature
-          ? {
-              type: layer.feature.type,
-              geometry: JSON.parse(JSON.stringify(layer.feature.geometry)),
-              properties: JSON.parse(JSON.stringify(layer.feature.properties))
-            }
-          : layer.toGeoJSON();
         map._editingPolygon = layer;
         const editLayerGroup = new L.FeatureGroup();
         editLayerGroup.addLayer(layer);
         const editHandler = new L.EditToolbar.Edit(map, { featureGroup: editLayerGroup });
         editHandler.enable();
 
-        function isTouch() {
-          return 'ontouchstart' in window || window.matchMedia('(pointer: coarse)').matches;
-        }
+        // 編集終了用のハンドラ
         function finishEdit(ev) {
           editHandler.disable();
           editLayerGroup.clearLayers();
@@ -332,15 +301,23 @@
               };
             });
           }
-          map.off(isTouch() ? 'touchstart' : 'click', finishEdit);
+          map.off('touchstart', onMapTouchOrClick, true);
+          map.off('mousedown', onMapTouchOrClick, true);
           map._editingPolygon = null;
         }
+
+        // 編集対象レイヤ以外タッチ・クリック時に編集終了
+        function onMapTouchOrClick(ev) {
+          // 図形本体・編集ドット以外なら終了
+          if (!layer._path || (ev.target !== layer._path && !ev.target.closest('.leaflet-editing-icon'))) {
+            finishEdit(ev);
+          }
+        }
+
+        // スマホ/PC両対応で終了できるよう両方登録
         setTimeout(() => {
-          map.once(isTouch() ? 'touchstart' : 'click', function(ev) {
-            if (!ev.originalEvent || !ev.originalEvent.target.closest('.leaflet-interactive')) {
-              finishEdit(ev);
-            }
-          });
+          map.on('touchstart', onMapTouchOrClick, true);
+          map.on('mousedown', onMapTouchOrClick, true);
         }, 100);
       }
 
@@ -350,6 +327,7 @@
         bindPolygonInfo(layer, date, name);
       }
 
+      // 再描画用
       function loadAllPolygons() {
         fetch('http://localhost:3001/api/polygons')
           .then(res => res.json())
@@ -419,14 +397,6 @@
 
       map.on('draw:edited', function (e) {
         e.layers.eachLayer(function (layer) {
-          const originalGeoJSON = layer.feature
-            ? {
-                type: layer.feature.type,
-                geometry: JSON.parse(JSON.stringify(layer.feature.geometry)),
-                properties: JSON.parse(JSON.stringify(layer.feature.properties))
-              }
-            : layer.toGeoJSON();
-
           let geojson = layer.toGeoJSON();
           let id = (layer.feature && layer.feature.properties && layer.feature.properties.id) || geojson.properties && geojson.properties.id;
           const date = document.getElementById("date").value;
