--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>一致団結ポスティングマップ</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
   <style>
@@ -48,7 +48,9 @@
       height: 40px;
       margin: 0;
     }
-    #form { position: relative; }
+    #form {
+      position: relative;
+    }
     #map {
       flex: 1 1 auto; min-height: 350px; width: 100vw; height: 70vh; max-height: 100dvh; z-index: 1;
       display: block;
@@ -78,14 +80,19 @@
         font-size: 16px !important;
         width: 156px; min-width: 117px; max-width: 221px;
       }
-      .custom-help-container { right: 6px; }
+      .custom-help-container {
+        right: 6px;
+      }
     }
     @media (max-width: 400px) {
       #form label { min-width: 70px; max-width: 110px; }
       #form input[type="date"] { width: 105px; min-width: 80px; max-width: 143px; }
       #form input[type="text"], #name { width: 91px; min-width: 78px; max-width: 143px; }
-      .custom-help-container { right: 2px; }
+      .custom-help-container {
+        right: 2px;
+      }
     }
+
     .custom-help-btn {
       width: 32px; height: 32px; border-radius: 50%; background: #fff; color: #e4007f; border: 2px solid #e4007f;
       font-size: 22px; font-weight: bold; text-align: center; line-height: 28px; box-shadow: 0 2px 6px rgba(60,64,67,0.12);
@@ -266,13 +273,23 @@
 
       function startEditMode(layer) {
         if (map._editingPolygon) return;
+        // 編集前にfeatureをdeepコピー
+        const originalGeoJSON = layer.feature
+          ? {
+              type: layer.feature.type,
+              geometry: JSON.parse(JSON.stringify(layer.feature.geometry)),
+              properties: JSON.parse(JSON.stringify(layer.feature.properties))
+            }
+          : layer.toGeoJSON();
         map._editingPolygon = layer;
         const editLayerGroup = new L.FeatureGroup();
         editLayerGroup.addLayer(layer);
         const editHandler = new L.EditToolbar.Edit(map, { featureGroup: editLayerGroup });
         editHandler.enable();
 
-        // 編集終了用のハンドラ
+        function isTouch() {
+          return 'ontouchstart' in window || window.matchMedia('(pointer: coarse)').matches;
+        }
         function finishEdit(ev) {
           editHandler.disable();
           editLayerGroup.clearLayers();
@@ -301,23 +318,15 @@
               };
             });
           }
-          map.off('touchstart', onMapTouchOrClick, true);
-          map.off('mousedown', onMapTouchOrClick, true);
+          map.off(isTouch() ? 'touchstart' : 'click', finishEdit);
           map._editingPolygon = null;
         }
-
-        // 編集対象レイヤ以外タッチ・クリック時に編集終了
-        function onMapTouchOrClick(ev) {
-          // 図形本体・編集ドット以外なら終了
-          if (!layer._path || (ev.target !== layer._path && !ev.target.closest('.leaflet-editing-icon'))) {
-            finishEdit(ev);
-          }
-        }
-
-        // スマホ/PC両対応で終了できるよう両方登録
         setTimeout(() => {
-          map.on('touchstart', onMapTouchOrClick, true);
-          map.on('mousedown', onMapTouchOrClick, true);
+          map.once(isTouch() ? 'touchstart' : 'click', function(ev) {
+            if (!ev.originalEvent || !ev.originalEvent.target.closest('.leaflet-interactive')) {
+              finishEdit(ev);
+            }
+          });
         }, 100);
       }
 
